# slothbear

./: .gitignore  Cargo.toml  LICENSE
resources/: Sloth-bear-.psd  maya.js.txt
slothbear-api/: .gitignore  Cargo.toml
slothbear-api/src/: db.rs  helper.rs  main.rs  models.rs  routes.rs  tests.rs
slothbear-api/static/: 404.html  index.html  index.js  jobs.html  jobs.js  new.html  new.js
slothbear-cub/: .gitignore  Cargo.toml
slothbear-cub/src/: main.rs
slothbear-mamma/: .gitignore  Cargo.toml
slothbear-mamma/src/: main.rs  routes.rs
slothbear-submitter/: Cargo.toml  build.rs
slothbear-submitter-maya/: rpSubmit.py  shelf_Rendering.mel  slothbearSubmitter.py
slothbear-submitter/src/: main.rs
slothbear-submitter/src/static/: index.html
slothbear-web/: .gitignore  Cargo.toml  index.html  index.js
slothbear-web/app/new/: new.js
slothbear-web/construction/: index.html
slothbear-web/login/: login.js
slothbear-web/public/: index.html  index.js  sounds.html
slothbear-web/public/app/: index.html
slothbear-web/public/app/new/: index.html
slothbear-web/public/js/: sounds-alt.js  sounds.js
slothbear-web/public/login/: index.html  login.js
slothbear-web/src/: main.rs  models.rs  routes.rs  service.rs  tests.rs
slothbear-worker-service/: Cargo.toml
slothbear-worker-service/src/: main.rs
