[package]
name = "slothbear-submitter"
version = "0.1.0"
authors = ["Pocket of Weird <hartzlernathan@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.6.2", features = ["edge"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "0.3.0"
minreq = { version = "2.1.0", features = ["https", "json-using-serde"] }


[build-dependencies]
winres = "0.1"